src/golden/cards/templates/nested/typeerrors/test.golden/structsNeedSending.fl
	struct MyStruct
		String msg
		
	card StructsNeedSendingToRegularFields
		state
			MyStruct s
			
		template top
			field1 <- s
			field2 <- s => format
			hold <- s // this is now supported and not an error
			for-cards <- s
			
		template format 
		
	card CannotSendIfDestinationIsAContainer
		state
			MyStruct s
			
		template top
			hold <- s => format
			
		template format 